# devcontainer-templates

./: README.md  Taskfile.yml
.devcontainer/: devcontainer.json  update_content_command.sh
src/agent/: README.md  devcontainer-template.json  main.py  pyproject.toml
src/agent/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml  update_content_command.sh
src/agent/src/agent/tools/: shell.py
